samples/_failures_safe/1761411165_1cc93f_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_4f1215f8.c: In function ‘parse_string’:
./samples/SAFE/__tmp_4f1215f8.c:167:36: error: expected ‘;’ at end of input
  167 |             token->line = tokenizer
      |                                    ^
      |                                    ;
./samples/SAFE/__tmp_4f1215f8.c:167:13: error: expected declaration or statement at end of input
  167 |             token->line = tokenizer
      |             ^~~~~
./samples/SAFE/__tmp_4f1215f8.c:167:13: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_4f1215f8.c:167:13: error: expected declaration or statement at end of input
